feat: 미션 3 구현 및 테스트 완료, 피드백 refact