@@ -1,10 +1,12 @@
 package com.sprint.mission.discodeit.service.basic;
 
+import com.sprint.mission.discodeit.dto.data.ChannelDTO;
 import com.sprint.mission.discodeit.dto.request.PrivateChannelCreateRequest;
 import com.sprint.mission.discodeit.dto.request.PublicChannelCreateRequest;
 import com.sprint.mission.discodeit.dto.request.PublicChannelUpdateRequest;
 import com.sprint.mission.discodeit.dto.response.ChannelResponse;
 import com.sprint.mission.discodeit.entity.Channel;
+import com.sprint.mission.discodeit.entity.ChannelType;
 import com.sprint.mission.discodeit.entity.Message;
 import com.sprint.mission.discodeit.entity.ReadStatus;
 import com.sprint.mission.discodeit.repository.ChannelRepository;
@@ -12,9 +14,11 @@ import com.sprint.mission.discodeit.repository.MessageRepository;
 import com.sprint.mission.discodeit.repository.ReadStatusRepository;
 import com.sprint.mission.discodeit.service.ChannelService;
 import java.time.Instant;
+import java.util.ArrayList;
+import java.util.Comparator;
 import java.util.List;
+import java.util.NoSuchElementException;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
@@ -28,129 +32,133 @@ public class BasicChannelService implements ChannelService {
 
   @Override
   public ChannelResponse createPublicChannel(PublicChannelCreateRequest request) {
-    Channel channel = new Channel(request.getName(), request.getDescription(), false);
-    channelRepository.save(channel);
-    return new ChannelResponse(channel.getId(), channel.getName(), channel.isPrivate());
+    String name = request.name();
+    String description = request.description();
+    Channel channel = new Channel(ChannelType.PUBLIC, name, description);
+    Channel saved = channelRepository.save(channel);
+    return toResponse(saved);
   }
 
   @Override
   public ChannelResponse createPrivateChannel(PrivateChannelCreateRequest request) {
-    Channel channel = new Channel("private", null, true);
-    channelRepository.save(channel);
+    Channel channel = new Channel(ChannelType.PRIVATE, null, null);
+    Channel saved = channelRepository.save(channel);
 
-    for (UUID userId : request.getUserIds()) {
-      ReadStatus readStatus = new ReadStatus(userId, channel.getId(), Instant.now());
-      readStatusRepository.save(readStatus);
-    }
+    request.participantIds().stream()
+        .map(userId -> new ReadStatus(userId, saved.getId(), Instant.MIN))
+        .forEach(readStatusRepository::save);
 
-    return new ChannelResponse(channel.getId(), channel.getName(), channel.isPrivate());
+    return toResponse(saved);
   }
 
   @Override
-  public Channel create(String name) {
-    Channel channel = new Channel(name);
-    channelRepository.save(channel);
-    return channel;
+  public ChannelDTO find(UUID channelId) {
+    return channelRepository.findById(channelId)
+        .map(this::toDto)
+        .orElseThrow(
+            () -> new NoSuchElementException("Channel with id " + channelId + " not found"));
   }
 
   @Override
-  public ChannelResponse findById(UUID id) {
-    Channel channel = channelRepository.findById(id);
-    if (channel == null) {
-      return null;
-    }
+  public List<ChannelDTO> findAllByUserId(UUID userId) {
+    List<UUID> mySubscribedChannelIds = readStatusRepository.findAllByUserId(userId).stream()
+        .map(ReadStatus::getChannelId)
+        .toList();
 
-    Instant lastMessageAt = messageRepository.findAll().stream()
-        .filter(m -> m.getChannelId().equals(id))
-        .map(Message::getCreatedAt)
-        .max(Instant::compareTo)
-        .orElse(null);
-
-    List<UUID> participantIds = null;
-    if (channel.isPrivate()) {
-      participantIds = readStatusRepository.findAllByChannelId(id).stream()
-          .map(ReadStatus::getUserId)
-          .toList();
-    }
-
-    return new ChannelResponse(
-        channel.getId(),
-        channel.getName(),
-        channel.isPrivate(),
-        lastMessageAt,
-        participantIds
-    );
-  }
-
-  @Override
-  public List<ChannelResponse> findAll() {
     return channelRepository.findAll().stream()
-        .filter(channel -> !channel.isPrivate())
-        .map(this::toResponse)
-        .collect(Collectors.toList());
+        .filter(channel ->
+            channel.getType().equals(ChannelType.PUBLIC)
+                || mySubscribedChannelIds.contains(channel.getId())
+        )
+        .map(this::toDto)
+        .toList();
   }
 
   @Override
-  public List<ChannelResponse> findAllByUserId(UUID userId) {
-    return channelRepository.findAll().stream()
-        .filter(channel -> !channel.isPrivate() ||
-            readStatusRepository.findAllByChannelId(channel.getId()).stream()
-                .anyMatch(rs -> rs.getUserId().equals(userId)))
-        .map(this::toResponse)
-        .collect(Collectors.toList());
-  }
+  public ChannelResponse update(UUID channelId, PublicChannelUpdateRequest request) {
+    String newName = request.NewName();
+    String newDescription = request.NewDescription();
 
-  private ChannelResponse toResponse(Channel channel) {
-    Instant lastMessageAt = messageRepository.findAll().stream()
-        .filter(m -> m.getChannelId().equals(channel.getId()))
-        .map(Message::getCreatedAt)
-        .max(Instant::compareTo)
-        .orElse(null);
+    Channel channel = channelRepository.findById(channelId)
+        .orElseThrow(
+            () -> new NoSuchElementException("Channel with id " + channelId + " not found"));
 
-    List<UUID> participantIds = null;
-    if (channel.isPrivate()) {
-      participantIds = readStatusRepository.findAllByChannelId(channel.getId()).stream()
-          .map(ReadStatus::getUserId)
-          .toList();
+    if (channel.getType().equals(ChannelType.PRIVATE)) {
+      throw new IllegalArgumentException("Private channel cannot be updated");
     }
 
-    return new ChannelResponse(
-        channel.getId(),
-        channel.getName(),
-        channel.isPrivate(),
-        lastMessageAt,
-        participantIds
-    );
+    channel.update(newName, newDescription);
+    Channel saved = channelRepository.save(channel);
+    return toResponse(saved);
   }
 
   @Override
-  public ChannelResponse update(PublicChannelUpdateRequest request) {
-    Channel channel = channelRepository.findById(request.getChannelId());
-    if (channel == null) {
-      return null;
-    }
-    if (channel.isPrivate()) {
-      throw new UnsupportedOperationException("Private channels cannot be updated.");
-    }
+  public ChannelResponse delete(UUID channelId) {
+    Channel channel = channelRepository.findById(channelId)
+        .orElseThrow(
+            () -> new NoSuchElementException("Channel with id " + channelId + " not found"));
 
-    channel.update(request.getName(), request.getDescription());
-    channelRepository.save(channel);
+    messageRepository.deleteAllByChannelId(channel.getId());
+    readStatusRepository.deleteAllByChannelId(channel.getId());
+    channelRepository.deleteById(channelId);
+
     return toResponse(channel);
   }
 
-  @Override
-  public Channel delete(UUID id) {
-    Channel channel = channelRepository.findById(id);
-    if (channel != null) {
-      messageRepository.findAll().stream()
-          .filter(m -> m.getChannelId().equals(id))
-          .map(Message::getId)
-          .forEach(messageRepository::delete);
+  private ChannelDTO toDto(Channel channel) {
+    Instant lastMessageAt = messageRepository.findAllByChannelId(channel.getId())
+        .stream()
+        .sorted(Comparator.comparing(Message::getCreatedAt).reversed())
+        .map(Message::getCreatedAt)
+        .limit(1)
+        .findFirst()
+        .orElse(Instant.MIN);
 
-      readStatusRepository.deleteByChannelId(id);
-      
-      channelRepository.delete(id);
+    List<UUID> participantIds = new ArrayList<>();
+    if (channel.getType().equals(ChannelType.PRIVATE)) {
+      readStatusRepository.findAllByChannelId(channel.getId())
+          .stream()
+          .map(ReadStatus::getUserId)
+          .forEach(participantIds::add);
     }
-    return channel;
+
+    return new ChannelDTO(
+        channel.getId(),
+        channel.getType(),
+        channel.getName(),
+        channel.getDescription(),
+        lastMessageAt,
+        participantIds
+
+    );
+  }
+
+  private ChannelResponse toResponse(Channel channel) {
+
+    Instant lastMessageAt = messageRepository.findAllByChannelId(channel.getId())
+        .stream()
+        .sorted(Comparator.comparing(Message::getCreatedAt).reversed())
+        .map(Message::getCreatedAt)
+        .findFirst()
+        .orElse(Instant.MIN);
+
+    List<UUID> participantIds = new ArrayList<>();
+    if (channel.getType().equals(ChannelType.PRIVATE)) {
+      participantIds = readStatusRepository.findAllByChannelId(channel.getId())
+          .stream()
+          .map(ReadStatus::getUserId)
+          .toList();
+    }
+
+    return new ChannelResponse(
+        channel.getId(),
+        channel.getType(),
+        channel.getName(),
+        channel.getDescription(),
+        lastMessageAt,
+        participantIds
+
+    );
   }
 }
+
